--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
     "require": {
         "php": ">=7.1.0"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "autoload": {
+        "psr-4": {
+            "zikwall\\findyouapi\\": ""
+        }
+    }
 }
